<resources>
    <string name="app_name">ForeQuiz</string>

    <!-- TextView -->
    <string name="resultText">Result</string>
    <string name="questionTitle">Question</string>
    <string name="questionText">Tap in ascending order.</string>

    <!-- Buttons -->
    <string name="b0">Choice1</string>
    <string name="b1">Choice2</string>
    <string name="b2">Choice3</string>
    <string name="b3">Choice4</string>

    <string name="prevBtn">Prev</string>
    <string name="nextBtn">Next</string>
</resources>
